k8s/service.yml
kind: Service
apiVersion: v1

metadata:
  name: java-svc
  namespace: java-ns

spec:
  selector:
    app: java-app

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
