k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: java-ingress
  namespace: java-ns

spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /quotes
          backend:
            service:
              name: java-svc
              port:
                number: 8000
